# upload_file

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
alembic/: env.py
alembic/versions/: 22b86c496c46_add_users_table.py  3882bc9b8c71_add_users_table.py  61b8a3b22298_add_users_table_again.py  fa313856ac54_initial_migration.py
src/api/: dependencies.py  router.py
src/api/routes/: auth.py  files.py
src/config/: app.py  database.py  minio_client.py  settings.py
src/models/: file_data.py  user.py
src/repositories/: file_repository.py  user.py
src/schemas/: auth.py  file_schema.py
src/services/: auth.py  file_service.py  minio_service.py
src/tests/: test_upload_file.py
